<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATVM</string>
    <string name="title_station_list">ATVM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="destination">DESTINATION: </string>
    
    <string name="versova">Versovass</string>
    
    <string name="one">1</string>
    <string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>	    
    <string name="five">5</string>
    <string name="adult">ADULT: </string>
    <string name="child">CHILD: </string>
    <string name="zero">0</string>
    <string name="journey">JOURNEY: </string>
    <string name="single_btn">SINGLE</string>
    <string name="return_btn">RETURN</string>
    <string name="reset">RESET</string>
    <string name="print">PRINT</string>

</resources>
